--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               </a>
             </div>
             <div class="col-md-2">
-              <a href="https://plus.google.com/113204818480520067437">
+              <a href="https://plus.google.com/+RobertMetzger?rel=author">
                 <i class="icon-google-plus-sign icon-hover icon-4x"></i>
               </a>
             </div>
