--- a/index.html
+++ b/index.html
@@ -40,31 +40,21 @@
         <header>
           <h1>robertmetzger.de</h1>
         </header>
-        <p>Computer Science Student at TU Berlin</p>
+        <p>Software Engineer and Co-Founder at <a href="http://data-artisans.com/">data Artisans</a>, PMC member at <a href="http://flink.apache.org">Apache Flink</a></p>
         <hr>
 
         <section id="main_content">
           <div class="row">
-            <div class="col-md-2">
+            <div class="col-md-4">
              <a class="icon-hover icon-linkedin-sign icon-4x" href="http://de.linkedin.com/in/metzgerrobert"></a>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-4">
               <a href="https://twitter.com/rmetzger_" class="icon-twitter-sign icon-hover icon-4x">
               </a>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-4">
               <a href="https://github.com/rmetzger">
                 <i class="icon-github-sign icon-hover icon-4x"></i>
-              </a>
-            </div>
-            <div class="col-md-2">
-              <a href="https://www.facebook.com/robert.metzger">
-                <i class="icon-facebook-sign icon-hover icon-4x"></i>
-              </a>
-            </div>
-            <div class="col-md-2">
-              <a href="https://plus.google.com/+RobertMetzger?rel=author">
-                <i class="icon-google-plus-sign icon-hover icon-4x"></i>
               </a>
             </div>
           </div>
